--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="Zelda"
-main_scene="res://scenes/test_scene.tscn"
+main_scene="res://scenes/test_level.tscn"
 icon="res://icon.png"
 
 [display]
@@ -13,3 +13,8 @@ height=480
 
 filter=false
 gen_mipmaps=false
+
+[input]
+
+A=[key(X)]
+B=[key(Z)]
