add placeholder HUD

--- a/engine.cfg
+++ b/engine.cfg
@@ -4,6 +4,10 @@ name="Zelda"
 main_scene="res://scenes/test_level.tscn"
 icon="res://icon.png"
 
+[autoload]
+
+HUD="*res://scenes/HUD/HUD.tscn"
+
 [display]
 
 width=640
