--- a/engine.cfg
+++ b/engine.cfg
@@ -1,6 +1,6 @@
 [application]
 
-name="Zelda"
+name="Legend of Alpaca: Oracle of Godot"
 main_scene="res://scenes/test_level.tscn"
 icon="res://icon.png"
 
