--- a/engine.cfg
+++ b/engine.cfg
@@ -6,6 +6,7 @@ icon="res://icon.png"
 
 [autoload]
 
+MUSIC="*res://scenes/singletons/music.tscn"
 INVENTORY="*res://scenes/items/INVENTORY.tscn"
 HUD="*res://scenes/HUD/HUD.tscn"
 
