working on fixes

--- a/engine.cfg
+++ b/engine.cfg
@@ -6,6 +6,7 @@ icon="res://icon.png"
 
 [autoload]
 
+DIALOG="*res://scenes/singletons/DIALOG.tscn"
 MUSIC="*res://scenes/singletons/MUSIC.tscn"
 INVENTORY="*res://scenes/items/INVENTORY.tscn"
 HUD="*res://scenes/HUD/HUD.tscn"
@@ -16,6 +17,10 @@ stretch_mode="2d"
 stretch_aspect="keep"
 width=640
 height=480
+
+[editor_plugins]
+
+enabled=["SMRT"]
 
 [image_loader]
 
