add README and license info

--- a/engine.cfg
+++ b/engine.cfg
@@ -6,6 +6,7 @@ icon="res://icon.png"
 
 [autoload]
 
+CONST="*res://scenes/singletons/CONST.gd"
 DIALOG="*res://scenes/singletons/DIALOG.tscn"
 MUSIC="*res://scenes/singletons/MUSIC.tscn"
 INVENTORY="*res://scenes/items/INVENTORY.tscn"
